Created ServerModule1 and Form2; Edited settings and Form1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,9 +1,11 @@
 unique_ids:
   forms:
     Form1: 6WLC4ZYUOQMQYBY6VZPLJOR5MSCCEW6A
+    Form2: '1722946292286167205681614.98096'
   modules: {}
-  server_modules: {}
+  server_modules:
+    ServerModule1: '1722944452488885212508949.7025'
   assets:
-    theme.css: KCK7OIHGQWM4Q2WNVBWMNUYEWFXCJXTQ
     standard-page.html: RT2VLI3S62DLLNXGAHRQUEHAXM7EX7M2
+    theme.css: KCK7OIHGQWM4Q2WNVBWMNUYEWFXCJXTQ
   scripts: {}
