--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -8,10 +8,6 @@ components:
   name: content_panel
   layout_properties: {slot: default}
   components:
-  - name: outlined_1
-    properties: {role: outlined}
-    type: TextBox
-    layout_properties: {grid_position: 'GHLFJF,TWACHC'}
   - name: outlined_card_1
     properties: {role: outlined-card}
     type: ColumnPanel
@@ -54,3 +50,13 @@ components:
   properties: {}
   name: navbar_links
   layout_properties: {slot: nav-right}
+  components:
+  - name: logout
+    properties: {text: Logout, role: filled-button}
+    type: Button
+    layout_properties: {}
+    event_bindings: {click: logout_click}
+- name: title_label
+  properties: {text: 'Logged in as:'}
+  type: Label
+  layout_properties: {slot: title}
