Created Form2.RowTemplate1; Edited settings, ServerModule1, Form2 and Form1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -2,6 +2,7 @@ unique_ids:
   forms:
     Form1: 6WLC4ZYUOQMQYBY6VZPLJOR5MSCCEW6A
     Form2: '1722946292286167205681614.98096'
+    Form2.RowTemplate1: '1723449187237865421264757.1213'
   modules: {}
   server_modules:
     ServerModule1: '1722944452488885212508949.7025'
