--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -60,3 +60,18 @@ components:
   properties: {text: 'Logged in as:'}
   type: Label
   layout_properties: {slot: title}
+- name: column_panel_1
+  properties: {}
+  type: ColumnPanel
+  layout_properties: {slot: left-nav}
+  components:
+  - name: link_1
+    properties: {text: View}
+    type: Link
+    layout_properties: {grid_position: 'PZYLFZ,EVPYIB'}
+    event_bindings: {click: link_1_click}
+  - name: link_2
+    properties: {text: Enter}
+    type: Link
+    layout_properties: {grid_position: 'YEYYTZ,GGGDDI'}
+    event_bindings: {click: link_2_click}
