--- a/client_code/Form2/form_template.yaml
+++ b/client_code/Form2/form_template.yaml
@@ -7,7 +7,29 @@ components:
   properties: {}
   name: content_panel
   layout_properties: {slot: default}
-- type: FlowPanel
-  properties: {}
-  name: navbar_links
+  components:
+  - name: data_grid_1
+    properties:
+      columns:
+      - {id: ZAIPVT, data_key: id, title: id}
+      - {id: YHJSMH, data_key: name, title: name}
+      - {id: JQBZAI, data_key: email, title: email}
+      - {id: SIPWNK, data_key: feedback, title: feedback}
+      - {id: GCSVUW, data_key: timestamp, title: timestamp}
+      - {id: EBAZDX, data_key: logged_in_email, title: logged_in_email}
+      - {id: KXWKBH, data_key: logged_in_user, title: logged_in_user}
+    type: DataGrid
+    components:
+    - name: repeating_panel_1
+      properties: {item_template: Form2.RowTemplate1}
+      type: RepeatingPanel
+    layout_properties: {grid_position: 'ZNNDNY,YHWLLS'}
+- name: title_label
+  properties: {text: 'Logged in as:'}
+  type: Label
+  layout_properties: {slot: title}
+- name: logout
+  properties: {text: Logout, role: filled-button}
+  type: Button
   layout_properties: {slot: nav-right}
+  event_bindings: {click: logout_click}
