--- a/client_code/Form2/RowTemplate1/form_template.yaml
+++ b/client_code/Form2/RowTemplate1/form_template.yaml
@@ -1,3 +1,5 @@
 is_package: true
-container: {type: DataRowPanel}
+container:
+  type: DataRowPanel
+  properties: {spacing_above: none, spacing_below: none}
 components: []
