--- a/client_code/Form2/form_template.yaml
+++ b/client_code/Form2/form_template.yaml
@@ -18,6 +18,7 @@ components:
       - {id: GCSVUW, data_key: timestamp, title: timestamp}
       - {id: EBAZDX, data_key: logged_in_email, title: logged_in_email}
       - {id: KXWKBH, data_key: logged_in_user, title: logged_in_user}
+      role: tonal-data-grid
     type: DataGrid
     components:
     - name: repeating_panel_1
@@ -25,7 +26,7 @@ components:
       type: RepeatingPanel
     layout_properties: {grid_position: 'ZNNDNY,YHWLLS'}
 - name: title_label
-  properties: {text: 'Logged in as:'}
+  properties: {text: 'Logged in as:', role: body}
   type: Label
   layout_properties: {slot: title}
 - name: logout
